# check-docstrings

./: .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
app/: main.py
